[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/WordButton.gd" type="Script" id=1]
[ext_resource path="res://Resources/button_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/theme.tres" type="Theme" id=3]

[node name="WordButton" type="Button" groups=["button"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1152.0
margin_bottom = -702.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Hello"
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_WordButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_WordButton_mouse_exited"]
